@@ -7,6 +7,7 @@ plist=($PLIST)
 fdatas=()
 pdatas=()
 results=()
+easydatas=()
 shift
 shift
 echo "## This file is automatically generated. Do not edit!"
@@ -39,7 +40,10 @@ for bench_src in "$@"; do
        for i in "${bench_inputs[@]}"; do
 	   ibase=${i##*/}
 	   fdata="benchdata/$b-$ibase.fdata"
-	   
+           easy=
+	   if grep -q "USE IN MAKE CHECK" "$i" >/dev/null 2>&1; then
+               easy=1
+           fi
 	   # is it already there?
 	   found=
 	   for search in "${fdatas[@]}"; do [ "$fdata" = "$search" ] && found=1; done
@@ -50,13 +54,26 @@ for bench_src in "$@"; do
 	       fdatas+=("$fdata")
 	   fi
 	   for p in "${plist[@]}"; do
+               if test "$p" != "${plist[0]}" && ! expr "$b" : "mt" >/dev/null 2>&1; then
+                   continue
+               fi
 	       pdata="benchdata/$b-$bench_base-$ibase.p$p.out"
 	       echo "$pdata: $bench_base.x $fdata $i ;" \
 		   "\$(AM_V_GEN)echo \"## program=$bench_base ncores=$p input=$ibase\" >\$@.err && " \
-		   "\$(SLR) $bench_base.bin.$b -rf $fdata L= sep_dump= results= format=1 ncores=$p -Ws,-q 2>>\$@.err >/dev/null && " \
-		   "mv \$@.err \$@"
+		   "\$(SLR) $bench_base.bin.$b -rf $fdata L= sep_dump= results= format=1 ncores=$p >>\$@.err 2>&1 && " \
+		   "mv -f \$@.err \$@"
 	       pdatas_here+=("$pdata")
 	       pdatas+=("$pdata")
+               if test "$p" = "${plist[0]}" -a -n "$easy"; then
+                   edata="benchdata/$b-$bench_base-$ibase.check.out"
+                   echo "$edata: $bench_base.x $fdata $i ;" \
+                       "\$(AM_V_GEN)echo \"## CHECK: program=$bench_base input=$ibase, with output, csv format\" >\@.err && " \
+                       "\$(SLR) $bench_base.bin.$b -rf $fdata L=1 sep_dump=1 ncores=1 format=0 results=1 >>\$@.err 2>&1 && " \
+                       "echo \"## CHECK: program=$bench_base input=$ibase, fibre format\" >>\@.err && " \
+                       "\$(SLR) $bench_base.bin.$b -rf $fdata L=1 ncores=1 format=1 results= >>\$@.err 2>&1 && " \
+                       "mv -f \$@.err \$@"
+                   easydatas+=("$edata")
+               fi
 	   done
        done
        rdata="$bench_base.$b.out"
@@ -64,10 +81,16 @@ for bench_src in "$@"; do
        results+=("$rdata")
    done
 done
-echo ".PHONY: fdata results"
+echo ".PHONY: clean fdata results check clean-check recheck"
 echo "fdata: ${fdatas[*]}"
 echo "results: ${results[*]}"
 echo "clean:"
-for f in "${fdatas[@]}" "${pdatas[@]}" "${results[@]}"; do
+for f in "${fdatas[@]}" "${pdatas[@]}" "${easydatas[@]}" "${results[@]}"; do
     printf '\t@rm -f %s\n' "$f"
 done
+echo "clean-check:"
+for f in "${easydatas[@]}"; do
+    printf '\t@rm -f %s\n' "$f"
+done
+echo "check: clean-check ; \$(MAKE) recheck"
+echo "recheck: ${easydatas[*]}"
